--- a/index.html
+++ b/index.html
@@ -3,6 +3,35 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Seat Assignment</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      margin: 0;
+      padding: 0;
+      background-color: #f4f4f4;
+    }
+    h1 {
+      margin-top: 20px;
+    }
+    .container {
+      margin-top: 20px;
+    }
+    img {
+      width: 100px;
+      height: auto;
+      margin: 0 20px;
+      cursor: pointer;
+    }
+    #result {
+      margin-top: 20px;
+      font-size: 1.2em;
+      color: #333;
+    }
+    .error {
+      color: red;
+    }
+  </style>
   <script>
     async function fetchResult(option) {
       try {
