--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
 <body>
   <h1>Seat Assignment</h1>
   <div>
+ <!-- 'Yes' icon -->
     <img src="https://static.vecteezy.com/system/resources/previews/003/988/577/non_2x/thumb-up-icon-silhouette-hand-illustration-like-and-good-symbol-free-vector.jpg" alt="Yes" onclick="fetchResult('yes')" style="cursor:pointer;"/>
+    <!-- 'No' icon -->
     <img src="https://static.vecteezy.com/system/resources/previews/015/534/074/large_2x/hand-icon-design-with-thumb-pointing-down-free-vector.jpg" alt="No" onclick="fetchResult('no')" style="cursor:pointer;"/>
   </div>
   <div id="result">
