--- a/index.html
+++ b/index.html
@@ -1,32 +1,18 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Seat Assignment</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      margin: 0;
-      padding: 0;
-      background-color: #f4f4f4;
-    }
-    h1 {
-      margin-top: 20px;
-    }
-    .container {
-      margin-top: 20px;
-    }
     img {
       width: 100px;
       height: auto;
-      margin: 0 20px;
-      cursor: pointer;
+      margin: 10px;
     }
     #result {
       margin-top: 20px;
-      font-size: 1.2em;
-      color: #333;
+      font-size: 16px;
     }
     .error {
       color: red;
@@ -53,7 +39,7 @@
 <body>
   <h1>Seat Assignment</h1>
   <div>
- <!-- 'Yes' icon -->
+    <!-- 'Yes' icon -->
     <img src="https://static.vecteezy.com/system/resources/previews/003/988/577/non_2x/thumb-up-icon-silhouette-hand-illustration-like-and-good-symbol-free-vector.jpg" alt="Yes" onclick="fetchResult('yes')" style="cursor:pointer;"/>
     <!-- 'No' icon -->
     <img src="https://static.vecteezy.com/system/resources/previews/015/534/074/large_2x/hand-icon-design-with-thumb-pointing-down-free-vector.jpg" alt="No" onclick="fetchResult('no')" style="cursor:pointer;"/>
@@ -63,3 +49,4 @@
   </div>
 </body>
 </html>
+     
